--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "es-lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "ts-lint": "npx tsc --noEmit",
+    "lint": "npm run es-lint && npm run ts-lint",
     "preview": "vite preview",
     "format-all": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css}\""
   },
