--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ts-lint": "npx tsc --noEmit",
     "lint": "npm run es-lint && npm run ts-lint",
     "preview": "vite preview",
-    "format-all": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css}\""
+    "format-all": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,css}\"",
+    "prepare": "husky"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -31,6 +32,7 @@
     "eslint": "^8.55.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "husky": "^9.0.7",
     "typescript": "^5.2.2",
     "vite": "^5.0.8"
   }
