--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "es-lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "es-lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0 --cache",
     "ts-lint": "npx tsc --noEmit",
     "lint": "npm run es-lint && npm run ts-lint",
     "preview": "vite preview",
